Saving Preferences on a App template, overwrites the default preferences also #53274

Closed
opened 2017-11-09 12:26:40 +01:00 by Miguel Porces · 7 comments

System Information
Operating system and graphics card
Win10 64b - ATI Radeon

Blender Version
Broken: 2.79
Worked: Never
Short description of error

When an App template is loaded, saving the user preferences should only save the userpref.blend for the current template. But instead it overwrites the default template, followed by the config/{template_name}/userpref.blend

Exact steps for others to reproduce the error
Change the template to a custom one, do some changes in the preferences, save user_settings. It will output both write commands in the console, and after reverting to the default template, those preferences are still active.

**System Information** Operating system and graphics card Win10 64b - ATI Radeon **Blender Version** Broken: 2.79 Worked: Never **Short description of error** When an App template is loaded, saving the user preferences should only save the userpref.blend for the current template. But instead it overwrites the default template, followed by the config/{template_name}/userpref.blend **Exact steps for others to reproduce the error** Change the template to a custom one, do some changes in the preferences, save user_settings. It will output both write commands in the console, and after reverting to the default template, those preferences are still active.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Secrop

Added subscriber: @Secrop
Miguel Porces changed title from Saving Preferences on a App template, overwrites the default template also to Saving Preferences on a App template, overwrites the default preferences also 2017-11-09 12:31:52 +01:00

Added subscriber: @Harvester

Added subscriber: @Harvester

I can confirm the same issue here on Win10Pro 64bit and Blender 2.79 official portable 64bit.

I can confirm the same issue here on Win10Pro 64bit and Blender 2.79 official portable 64bit.
Campbell Barton self-assigned this 2017-11-10 17:07:16 +01:00

This is being done on purpose since the template is not used for all preferences.

Unfortunately this means some changes will overwrite the regular preferences.

To solve properly we need to either split preferences into multiple files, or merge so the changes from the template arent kept (probably the best short term solution)

This is being done on purpose since the template is not used for all preferences. Unfortunately this means some changes will overwrite the regular preferences. To solve properly we need to either split preferences into multiple files, or merge so the changes from the template arent kept (probably the best short term solution)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 326efb4319

This issue was referenced by 326efb431971e668a41d9a331ccc3d11f9fd3e5f
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53274
No description provided.