Fix T53274: Saving template prefs overwrites default prefs